tests/syntax_error/cstyle_ternary_multiline.jou
def main() -> int:
    x = (
        True ? 1  # Error: unexpected byte '?' (0x3f); Jou uses Python-style ternary expressions: foo if cond else bar
             : 2
    )
